Use inventory_hostname_short
When using AWS we use the full domain name in the inventory file, which
we rather than the short name.

--- a/test/integration/targets/vyos_config/tests/cli/comment.yaml
+++ b/test/integration/targets/vyos_config/tests/cli/comment.yaml
@@ -1,9 +1,13 @@
 ---
 - debug: msg="START cli/comment.yaml"
 
+- name: Debug
+  debug:
+      msg: "{{ inventory_hostname_short }}"
+
 - name: setup
   vyos_config:
-    lines: set system host-name {{ inventory_hostname }}
+    lines: set system host-name {{ inventory_hostname_short }}
     provider: "{{ cli }}"
     match: none
 
@@ -31,7 +35,7 @@
 
 - name: teardown
   vyos_config:
-    lines: set system host-name {{ inventory_hostname }}
+    lines: set system host-name {{ inventory_hostname_short }}
     provider: "{{ cli }}"
     match: none
 
