Build on macos-11 (more RAM)

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   docs:
     name: Build Ansible docs
-    runs-on: ubuntu-latest
+    runs-on: macos-11
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -21,8 +21,8 @@ jobs:
 
 # HACK: For speed, only make a single page
       - name: make webdocs
-        #run: make htmlsingle rst=dev_guide/developing_modules_documenting.rst
-        run: make webdocs
+        run: make htmlsingle rst=dev_guide/developing_modules_documenting.rst
+        #run: make webdocs
         working-directory: docs/docsite
 
 # HACK: Replace with SCP/RSYNC to server
